2015-10-13 Martin Grønholdt

* fs/LICENSE: Removed.
* fs/LICENSE.zip: License now zip compressed.
* fs/connect/LICENSE: Removed.
* fs/connect/LICENSE.zip: Link to /LICENSE_zip
* fs/*.html: Use compressed license.
* fs/connect/*.html: Use compressed license.


2015-10-12 Martin Grønholdt

* docs/flashmap.md: Formatting.


2015-10-11 Martin Grønholdt

* build.sh: Added, build with log file output.
* ld/eagle.app.v6.ld: Linker script that moves code into ROM.
* tools/esp-config-tools/src/gen_config.c (main): Added "I've done good." message.
* mk/config.mk: Added VERSION.
* user/user_config.h: Enable DEBUG_MEM when DEBUG is defined.
* Makefile: Added linker -gc-sections t remove unused functions from the firmware
		  : Fixed a variable name in flashfs.
		  : Added compiler flags -ffunction-sections -fdata-sections to
		    generate sections for everything so tha the linker can
		    remove unused stuff.
		  : Use local linker script.
		  : Nicer size output.
		  : Reintroduced the archive generation step.
* user/*: Removed ICACHE_FLASH_ATTR. Now accomplished by the linker scripts.


2015-10-11 Martin Grønholdt

* Makefile: Added project name to compiler defines.
		  : Added compiler debug define.
		  : Will only build for boards with 512KB flash.
		  : Reordered console output.
		  : Moved debug rule back here, to re-establish all as the first target.
* mk/config.mk: Added FLASH_SIZE.
			  : No longer set debug compiler define.
			  : No longer set project name compiler define.
* mk/linux.mk: Add OBJDUMP and OBJCOPY.
			 : Add variables to get version from github.
			 : Corrected the path of esptool.py.
			 : Added TERM_CMD.
			 : Removed debug rule.
* tools/mem_usage.sh: Changed output for the better.
* config/config.h: Version 1.0.
				  (struct config): fs_addr changed to uint32_t.
							     : No need for padding.
				  (config_entries): Changed size of fs_addr to 4.
* user_config.h: Added support for GIT_VERSION.