@@ -29,7 +29,7 @@
 	<div class="footer inverted">
 		<small><span class="copyright">&copy; Copyright 2015 Martin Bo Kristensen Gr&oslash;nholdt.</span><a href="LICENSE.zip" class="license inverted">Read license (compressed).</a></small>
 	</div>
-	<script src="js/atomic.min.js" type="text/javascript"></script>
+	<script src="js/atomic.js" type="text/javascript"></script>
 	<script type="text/javascript">
 		var fw_version = document.getElementById("fw_ver");
 		var httpd_version = document.getElementById("httpd_ver");
